--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <body>
         <h1>zadaca git</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, saepe.</p>
+        <div></div>
     </body>
 </html>
